--- a/Ethereum Paper Wallet Generator _ Paperwalleth_files/style.css
+++ b/Ethereum Paper Wallet Generator _ Paperwalleth_files/style.css
@@ -2,7 +2,8 @@ body {
     color: #565656;
     padding: 2px;
     font-family:Lato,sans-serif;
-    background:linear-gradient(140deg,#0ff0b3,#036ed9) fixed;
+    /* background:linear-gradient(140deg,#0ff0b3,#036ed9) fixed; */
+    background: black;
 }
 
 #container {
@@ -76,7 +77,7 @@ a {
 }
 
 #searchOL li a:hover:not(.header) {
-    background-color: #eee;
+    background-color: black;
 }
 
 @media only screen and (max-width: 640px) {
