--- a/public/global.css
+++ b/public/global.css
@@ -13,7 +13,7 @@ body {
 }
 
 a {
-	color: rgb(1, 111, 1);
+	color: rgb(0,100,200);
 	text-decoration: none;
 }
 
@@ -22,7 +22,7 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(1, 111, 1);
+	color: rgb(0,80,160);
 }
 
 label {
